[package]
name = "const-zero"
version = "0.1.0"
authors = ["Max Blachman <blachmanmax@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a const mem::zeroed"
repository = "https://github.com/maxbla/const-zero"
readme = "readme.md"

[workspace]
default-members = [".", "test-shadow-core"]
members = [".", "test-shadow-core", "not-core"]
